--- a/charts/vela-core/crds/core.oam.dev_traitdefinitions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_traitdefinitions.yaml
@@ -17,7 +17,7 @@ spec:
     listKind: TraitDefinitionList
     plural: traitdefinitions
     singular: traitdefinition
-  scope: Cluster
+  scope: Namespaced
   versions:
   - additionalPrinterColumns:
     - jsonPath: .spec.definitionRef.name
