--- a/charts/vela-core/templates/defwithtemplate/webservice.yaml
+++ b/charts/vela-core/templates/defwithtemplate/webservice.yaml
@@ -3,6 +3,7 @@ apiVersion: core.oam.dev/v1alpha2
 kind: WorkloadDefinition
 metadata:
   name: webservice
+  namespace: {{.Values.systemDefinitionNamespace}}
   annotations:
     definition.oam.dev/description: "Describes long-running, scalable, containerized services that have a stable network endpoint to receive external network traffic from customers.
     If workload type is skipped for any service defined in Appfile, it will be defaulted to `webservice` type."
