--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -64,6 +64,45 @@ jobs:
           flags: unittests
           name: codecov-umbrella
 
+  compatibility-test:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Set up Go 1.14
+        uses: actions/setup-go@v1
+        with:
+          go-version: ${{ env.GO_VERSION }}
+        id: go
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+
+      - name: Cache Go Dependencies
+        uses: actions/cache@v2
+        with:
+          path: .work/pkg
+          key: ${{ runner.os }}-pkg-${{ hashFiles('**/go.sum') }}
+          restore-keys: ${{ runner.os }}-pkg-
+
+      - name: Install ginkgo
+        run: |
+          sudo apt-get install -y golang-ginkgo-dev
+
+      - name: Setup Kind Cluster
+        uses: engineerd/setup-kind@v0.5.0
+        with:
+          version: ${{ env.KIND_VERSION }}
+
+      - name: install Kubebuilder
+        uses: wonderflow/kubebuilder-action@v1.1
+
+      - name: Run Make compatibility-test
+        run: make compatibility-test
+
+      - name: Clean up testdata
+        run: make compatibility-testdata-cleanup
+
   e2e-tests:
     runs-on: aliyun
     steps:
