--- a/charts/vela-core/crds/core.oam.dev_workloaddefinitions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_workloaddefinitions.yaml
@@ -17,7 +17,7 @@ spec:
     listKind: WorkloadDefinitionList
     plural: workloaddefinitions
     singular: workloaddefinition
-  scope: Cluster
+  scope: Namespaced
   versions:
   - additionalPrinterColumns:
     - jsonPath: .spec.definitionRef.name
