--- a/charts/vela-core/templates/definitions/containerizedworkloads.yaml
+++ b/charts/vela-core/templates/definitions/containerizedworkloads.yaml
@@ -2,6 +2,7 @@ apiVersion: core.oam.dev/v1alpha2
 kind: WorkloadDefinition
 metadata:
   name: containerizedworkloads.core.oam.dev
+  namespace: {{.Values.systemDefinitionNamespace}}
 spec:
   definitionRef:
     name: containerizedworkloads.core.oam.dev
