--- a/charts/vela-core/templates/definitions/healthscopes.yaml
+++ b/charts/vela-core/templates/definitions/healthscopes.yaml
@@ -2,7 +2,7 @@ apiVersion: core.oam.dev/v1alpha2
 kind: ScopeDefinition
 metadata:
   name: healthscopes.core.oam.dev
-  namespace: default
+  namespace: {{.Values.systemDefinitionNamespace}}
 spec:
   workloadRefsPath: spec.workloadRefs
   allowComponentOverlap: true
