--- a/charts/vela-core/templates/defwithtemplate/manualscale.yaml
+++ b/charts/vela-core/templates/defwithtemplate/manualscale.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     definition.oam.dev/description: "Configures replicas for your service."
   name: scaler
+  namespace: {{.Values.systemDefinitionNamespace}}
 spec:
   appliesToWorkloads:
     - webservice
