--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_scopedefinitions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_scopedefinitions.yaml
@@ -21,7 +21,7 @@ spec:
     listKind: ScopeDefinitionList
     plural: scopedefinitions
     singular: scopedefinition
-  scope: Cluster
+  scope: Namespaced
   subresources: {}
   validation:
     openAPIV3Schema:
