--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_traitdefinitions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_traitdefinitions.yaml
@@ -21,7 +21,7 @@ spec:
     listKind: TraitDefinitionList
     plural: traitdefinitions
     singular: traitdefinition
-  scope: Cluster
+  scope: Namespaced
   subresources: {}
   validation:
     openAPIV3Schema:
