--- a/pkg/plugins/testdata/ingressDef.yaml
+++ b/pkg/plugins/testdata/ingressDef.yaml
@@ -2,6 +2,7 @@ apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
   name: ingress.test
+  namespace: vela-system
 spec:
   appliesToWorkloads:
     - webservice
