--- a/pkg/plugins/testdata/manualscalars.yaml
+++ b/pkg/plugins/testdata/manualscalars.yaml
@@ -2,7 +2,7 @@ apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
   name: scaler
-  namespace: default
+  namespace: vela-system
 spec:
   appliesToWorkloads:
     - core.oam.dev/v1alpha2.ContainerizedWorkload
