--- a/pkg/plugins/testdata/traitDef.yaml
+++ b/pkg/plugins/testdata/traitDef.yaml
@@ -2,6 +2,7 @@ apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
   name: routes.test
+  namespace: vela-system
   labels:
     usecase: forplugintest
 spec:
