--- a/charts/vela-core/crds/standard.oam.dev_rollouttraits.yaml
+++ b/charts/vela-core/crds/standard.oam.dev_rollouttraits.yaml
@@ -108,7 +108,7 @@ spec:
                             description: RolloutWebhook holds the reference to external checks used for canary analysis
                             properties:
                               expectedStatus:
-                                description: ExpectedStatus a
+                                description: ExpectedStatus contains all the expected http status code that we will accept as success
                                 items:
                                   type: integer
                                 type: array
@@ -215,7 +215,7 @@ spec:
                       description: RolloutWebhook holds the reference to external checks used for canary analysis
                       properties:
                         expectedStatus:
-                          description: ExpectedStatus a
+                          description: ExpectedStatus contains all the expected http status code that we will accept as success
                           items:
                             type: integer
                           type: array
