--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
@@ -357,9 +357,12 @@ spec:
                 revision:
                   format: int64
                   type: integer
+                revisionHash:
+                  type: string
               required:
               - name
               - revision
+              - revisionHash
               type: object
             rollingState:
               description: RollingState is the Rollout State
