--- a/references/plugins/testdata/manualscalars.yaml
+++ b/references/plugins/testdata/manualscalars.yaml
@@ -12,7 +12,7 @@ spec:
   workloadRefPath: spec.workloadRef
   extension:
     template: |-
-      output: {
+      outputs: scaler: {
       	apiVersion: "core.oam.dev/v1alpha2"
       	kind:       "ManualScalerTrait"
       	spec: {
