init Helm module
use settings from App to override Values

add discovery util to get workload created by helm module

add helm typed structs into workloadDef and traitDef

update doc & refine code

add e2e test for helm module application

use oam.dev/catalog as helm repo

Signed-off-by: roywang <seiwy2010@gmail.com>

--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_components.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_components.yaml
@@ -42,6 +42,21 @@ spec:
         spec:
           description: A ComponentSpec defines the desired state of a Component.
           properties:
+            helm:
+              description: HelmRelease records a Helm release used by a Helm module workload.
+              properties:
+                release:
+                  description: Release records a Helm release used by a Helm module workload.
+                  type: object
+                  
+                repository:
+                  description: HelmRelease records a Helm repository used by a Helm module workload.
+                  type: object
+                  
+              required:
+              - release
+              - repository
+              type: object
             parameters:
               description: Parameters exposed by this component. ApplicationConfigurations that reference this component may specify values for these parameters, which will in turn be injected into the embedded workload.
               items:
