--- a/charts/vela-core/crds/core.oam.dev_components.yaml
+++ b/charts/vela-core/crds/core.oam.dev_components.yaml
@@ -42,6 +42,21 @@ spec:
           spec:
             description: A ComponentSpec defines the desired state of a Component.
             properties:
+              helm:
+                description: HelmRelease records a Helm release used by a Helm module workload.
+                properties:
+                  release:
+                    description: Release records a Helm release used by a Helm module workload.
+                    type: object
+                    x-kubernetes-preserve-unknown-fields: true
+                  repository:
+                    description: HelmRelease records a Helm repository used by a Helm module workload.
+                    type: object
+                    x-kubernetes-preserve-unknown-fields: true
+                required:
+                - release
+                - repository
+                type: object
               parameters:
                 description: Parameters exposed by this component. ApplicationConfigurations that reference this component may specify values for these parameters, which will in turn be injected into the embedded workload.
                 items:
