--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -82,6 +82,8 @@ rbac:
 admissionWebhooks:
   enabled: true
   failurePolicy: Fail
+  certificate:
+    mountPath: /etc/k8s-webhook-certs
   patch:
     enabled: true
     image:
