Removed prometheus and certmanager crd's (#1005)
* Removed prometheus and certmanager crd's, use cert-manager helm chart dependency instead

* Fixed unit and 2e2 tests. Added servicemonitors and certmanager crd dependencies for tests as testdata.

* Run `helm dependency update`

* Delete kubevela helm release and namespace if existing

* WIP - Bad hack to add the certmanager crds before installing kubevela with cert-manager as dependency. The cert-manager crds are not available, when kubevela Issuer are installed otherwise.

* WIP Added admission patch for webhook

* WIP Refactored secrets config

* WIP Fixed helm chart

* WIP Disabled metrics cap, due missing prometheus dependency by default

* WIP Added certmanager for e2e tests

* WIP Added certmanager for e2e tests

* WIP cleanup

* Updated docs

* Re-added certificate mount path

--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -3,12 +3,11 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-installCertManager: false
 # Valid applyOnceOnly values: true/false/on/off/force
 applyOnceOnly: "off"
-useWebhook: true
-# By default, don't disable any builtin capabilities
-disableCaps: ""
+
+# By default, metrics are disabled due the prometheus dependency
+disableCaps: "metrics"
 image:
   repository: oamdev/vela-core
   tag: latest
@@ -77,10 +76,22 @@ tolerations: []
 
 affinity: {}
 
-# certificate related to the webhook
-certificate:
-  issuerName: selfsigned-issuer
-  certificateName: serving-cert
-  secretName: webhook-server-cert
-  mountPath: /etc/k8s-webhook-certs
-  caBundle: replace-me
+rbac:
+  create: true
+
+admissionWebhooks:
+  enabled: true
+  failurePolicy: Fail
+  certificate:
+    mountPath: /etc/k8s-webhook-certs
+  patch:
+    enabled: true
+    image:
+      repository: jettech/kube-webhook-certgen
+      tag: v1.5.0
+      pullPolicy: IfNotPresent
+    affinity: {}
+    tolerations: []
+  certManager:
+    enabled: false
+
