--- a/charts/vela-core/templates/kubevela-controller.yaml
+++ b/charts/vela-core/templates/kubevela-controller.yaml
@@ -107,10 +107,10 @@ spec:
           args:
             - "--metrics-addr=:8080"
             - "--enable-leader-election"
-            {{ if .Values.useWebhook }}
+            {{ if .Values.admissionWebhooks.enabled }}
             - "--use-webhook=true"
             - "--webhook-port={{ .Values.webhookService.port }}"
-            - "--webhook-cert-dir={{ .Values.certificate.mountPath }}"
+            - "--webhook-cert-dir={{ .Values.admissionWebhooks.certificate.mountPath }}"
             {{ end }}
             - "--health-addr=:{{ .Values.healthCheck.port }}"
             - "--apply-once-only={{ .Values.applyOnceOnly }}"
@@ -121,7 +121,7 @@ spec:
           imagePullPolicy: {{ quote .Values.image.pullPolicy }}
           resources:
           {{- toYaml .Values.resources | nindent 12 }}
-          {{ if .Values.useWebhook }}
+          {{ if .Values.admissionWebhooks.enabled }}
           ports:
             - containerPort: {{ .Values.webhookService.port }}
               name: webhook-server
@@ -142,16 +142,16 @@ spec:
             initialDelaySeconds: 90
             periodSeconds: 5
           volumeMounts:
-            - mountPath: {{ .Values.certificate.mountPath }}
+            - mountPath: {{ .Values.admissionWebhooks.certificate.mountPath }}
               name: tls-cert-vol
               readOnly: true
           {{ end }}
-      {{ if .Values.useWebhook }}
+      {{ if .Values.admissionWebhooks.enabled }}
       volumes:
         - name: tls-cert-vol
           secret:
             defaultMode: 420
-            secretName: {{ .Values.certificate.secretName | quote }}
+            secretName: {{ template "kubevela.fullname" . }}-admission
       {{ end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
