apply once only force will block workload apply when revision not changed even ac generation updated

--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationconfigurations.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationconfigurations.yaml
@@ -380,16 +380,19 @@ spec:
               items:
                 description: A WorkloadStatus represents the status of a workload.
                 properties:
+                  appliedGeneration:
+                    description: AppliedGeneration indicates the generation observed by the appConfig controller. The same field is also recorded in the annotations of workloads. A workload is possible to be deleted from cluster after created. This field is useful to track the observed generation of workloads after they are deleted.
+                    format: int64
+                    type: integer
                   componentName:
                     description: ComponentName that produced this workload.
                     type: string
                   componentRevisionName:
                     description: ComponentRevisionName of current component
                     type: string
-                  observedGeneration:
-                    description: ObservedGeneration indicates the generation observed by the appconfig controller. The same field is also recorded in the annotations of workloads. A workload is possible to be deleted from cluster after created. This field is useful to track the observed generation of workloads after they are deleted.
-                    format: int64
-                    type: integer
+                  dependencyUnsatisfied:
+                    description: DependencyUnsatisfied notify does the workload has dependency unsatisfied
+                    type: boolean
                   scopes:
                     description: Scopes associated with this workload.
                     items:
