manual e2e test example with bug fixes

--- a/docs/examples/advanced-cue/app4.yaml
+++ b/docs/examples/advanced-cue/app4.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   components:
     - name: express-server4
-      type: webserver
+      type: webservice
       settings:
         cmd:
           - node
