--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
@@ -73,6 +73,10 @@ spec:
             rolloutPlan:
               description: RolloutPlan is the details on how to rollout the resources The controller simply replace the old resources with the new one if there is no rollout plan involved
               properties:
+                batchPartition:
+                  description: All pods in the batches up to the batchPartition (included) will have the target resource specification while the rest still have the source resource This is designed for the operators to manually rollout Default is the the number of batches which will rollout all the batches
+                  format: int32
+                  type: integer
                 canaryMetric:
                   description: CanaryMetric provides a way for the rollout process to automatically check certain metrics before complete the process
                   items:
@@ -124,10 +128,6 @@ spec:
                     - name
                     type: object
                   type: array
-                lastBatchToRollout:
-                  description: All pods in the batches up to the batchPartition (included) will have the target resource specification while the rest still have the source resource This is designed for the operators to manually rollout Default is the the number of batches which will rollout all the batches
-                  format: int32
-                  type: integer
                 numBatches:
                   description: The number of batches, default = 1
                   format: int32
@@ -362,7 +362,6 @@ spec:
               required:
               - name
               - revision
-              - revisionHash
               type: object
             rollingState:
               description: RollingState is the Rollout State
